0.0.5b

- The command line options override the ones specified in the config file.

- Added a check in get_free_nodes to verify the validity of fn_hdr->ipstart.
  For example if the rnode has an IP which doesn't match with fn_hdr->ipstart
  there must be some errors. This led to bug 0002.

- qspn_remove_deads() removes the routes of the dead nodes from the routing
  table of the kernel.


0.0.4b

- The multi-interface support was added, now it is possible to use multiple
  network interfaces without the need of the bridge, just specify each
  interface you want to use with the -i option. (man netsukuku_d).

- The multipath support has been enabled for the external map, this means that
  more than one route will be used to reach a gnode. In other words the load
  balacing has been fully enabled.

- Endianness fixes: now the packets can be sent between two machines with
  different endianness.
  
- All the the packets are now sent without any alignment.

- The free_nodes struct has been optimised: to keep the list of free nodes it
  uses single bits instead of single bytes, this means that the list is now of
  32 bytes instead of 256.

- The bug in the load_rh_cache code is now fixed. (It caused crashes when the
  daemon was closed)
  
- The Make/configure support was added. Now you can use both SCons or Make to
  compile and install Netsukuku.

- The installation path of the man page is now fixed.

- The installation paths are changed!! BIN_DIR=/usr/bin/, MAN_DIR=/usr/man

- The /usr/share/netsukuku directory is now created by the daemon itself.

- Now /sys/net/ipv4/conf/INTERFACE/rp_filter is automatically disabled for the
  used network interface.

- Errors in load_hostnames() fixed. (It crashed it there was an just an empty
  '\n').

- Added CC and CXX options in Scontruct. Changes provided by Tero Auvinen.

- At hooking the first radar_scan is retried for three times.

- When the daemon is launched /etc/resolv.conf is modified automatically, so