@@ -1,8 +1,5 @@
 		[HIGH PRIORITY] 
 
-- Use an u_int for `trtt' and `rtt' in map_node, instead of using a struct
-  timeval. In this way we save 8 bytes!
-
 - Implement all the NTK_RFC: http://lab.dyne.org/Netsukuku_RFC
 
 - Gnodes contiguity
@@ -16,7 +13,7 @@
 			- call rehook() from tracer_store()	  [ 100% ]
 		- timed re-hook: the node waits that its rnodes, which are
 		  nearer to the other gnode, do the re-hook first.[ 100% ]
-		- merging of ext_maps
+		- merging of ext_maps				  [  45% ]
 	
 	- Challenge
 		- RSA between rnodes: the nodes which are already hooked ask
